--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+      <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+    <div id="assignment-container" class="row">
 
-    <script src="src/index.js"></script>  
+    </div>
+
+    <script src="src/index.js"></script>
+    <script src="src/components/app.js"></script>
+    <script src="src/components/assignments.js"></script>
+    <script src="src/adapters/assignmentsAdapter.js"></script>
+    <script src="src/components/assignment.js"></script>
+
   </body>
 </html>
