create a a new mthod createAssignments to post data to the api and create a new form to input the data

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 
     </div>
 
+    <input type="textarea" name="" value="">
+
+
     <script src="src/index.js"></script>
     <script src="src/components/app.js"></script>
     <script src="src/components/assignments.js"></script>
     <script src="src/adapters/assignmentsAdapter.js"></script>
     <script src="src/components/assignment.js"></script>
+    <script src="src/components/input.js"></script>
 
   </body>
 </html>
