display the courses on the dom

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="src/adapters/assignmentsAdapter.js"></script>
     <script src="src/components/assignment.js"></script>
     <script src="src/components/input.js"></script>
+    <script src="src/components/course.js"></script>
 
   </body>
 </html>
