--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <div id="assignment-container" class="row">
+    <div id="container" class="row">
 
     </div>
 
