--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <title></title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
       <link rel="stylesheet" href="styles/style.css">
+
   </head>
   <body>
+
+    <table class="table table-bordered">
+
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+
+    </tr>
+  </tbody>
+</table>
+
     <div id="container" class="row">
 
     </div>
