calculate the dates remaining to the deadline

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
   </head>
   <body>
+    <p id="demo"></p>
+
 
     <div id="container" class="row">
 
@@ -22,6 +24,7 @@
     <script src="src/components/assignment.js"></script>
     <script src="src/components/input.js"></script>
     <script src="src/components/course.js"></script>
+    <script src="src/components/countdown.js"></script>
 
   </body>
 </html>
