display the errors n the assignment form

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="src/components/input.js"></script>
     <script src="src/components/course.js"></script>
     <script src="src/components/countdown.js"></script>
+    <script src="src/components/errors.js"></script>
 
   </body>
 </html>
